--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
@@ -34,7 +34,7 @@
     "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
